fix findbugs errors
git-svn-id: https://irt-svn.stanford.edu/repos/irt/lane/laneweb/trunk@68310 c440208b-5602-0410-a095-92527a996296